--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+	  "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -22,3 +23,4 @@
     "pg": "^8.3.3"
   }
 }
+ 
